--- a/WiderScrollbar/build.gradle
+++ b/WiderScrollbar/build.gradle
@@ -22,6 +22,7 @@ android {
 }
 
 dependencies {
-    implementation 'androidx.appcompat:appcompat:1.3.0'
     implementation project(path: ':Aliucord')
+    implementation 'androidx.appcompat:appcompat:1.3.0'
+    implementation 'com.google.android.material:material:1.4.0'
 }
