--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,5 @@
+include ':DataSaver'
+include ':RotatedChat'
 include ':WiderScrollbar'
 include ':Token'
 include ':Weather'
@@ -8,3 +10,4 @@ include ':Aliucord'
 project(':Aliucord').projectDir = new File('../Aliucord/Aliucord')
 include ':DiscordStubs'
 project(':DiscordStubs').projectDir = new File('../Aliucord/DiscordStubs')
+
