--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,15 +32,16 @@ jobs:
         run: |
           cd $GITHUB_WORKSPACE/src
           chmod +x gradlew
-          ./gradlew make
+          ./gradlew make generateUpdaterJson
           cp **/build/*.zip $GITHUB_WORKSPACE/builds
+          cp build/updater.json $GITHUB_WORKSPACE/builds
 
       - name: Push builds
         run: |
           cd $GITHUB_WORKSPACE/builds
-          cp ../src/updater.json .
           git config --local user.email "actions@github.com"
           git config --local user.name "GitHub Actions"
           git add *
           git commit -m "Build $GITHUB_SHA" || exit 0   # do not error if nothing to commit
           git push
+
