--- a/AccountSwitcher/src/main/AndroidManifest.xml
+++ b/AccountSwitcher/src/main/AndroidManifest.xml
@@ -1,4 +1,2 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest package="com.aliucord.plugins">
-
-</manifest>
+<manifest package="com.aliucord.plugins"/>
