--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,6 +31,7 @@ jobs:
 
       - name: Build plugins
         run: |
+          cd $GITHUB_WORKSPACE/src
           ./gradlew make generateUpdaterJson
           cp **/build/*.zip $GITHUB_WORKSPACE/builds
           cp build/updater.json $GITHUB_WORKSPACE/builds
