Add paths to build workflow

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,9 +1,14 @@
-name: Build
+name: "Build"
 
 on:
   push:
     branches:
       - main
+    paths:
+      - 'gradle.properties'
+      - 'gradle/**'
+      - 'plugin/**'
+      - '**.gradle.kts'
 
 jobs:
   build:
