--- a/.editorconfig
+++ b/.editorconfig
@@ -25,6 +25,7 @@ ktlint_standard_no-wildcard-imports = disabled
 ktlint_standard_string-template-indent = disabled
 ktlint_standard_multiline-expression-wrapping = disabled
 ktlint_standard_function-expression-body = disabled
+ktlint_standard_chain-method-continuation = disabled
 ktlint_function_signature_body_expression_wrapping = default
 ktlint_chain_method_rule_force_multiline_when_chain_operator_count_greater_or_equal_than = 6
 ktlint_class_signature_rule_force_multiline_when_parameter_count_greater_or_equal_than = 3
