chore(CI): update gradle wrapper validation workflow to only run when necessary

--- a/.github/workflows/gradle-wrapper-validation.yml
+++ b/.github/workflows/gradle-wrapper-validation.yml
@@ -1,5 +1,11 @@
 name: "Validate Gradle Wrapper"
-on: [ push, pull_request ]
+on:
+  push:
+    paths:
+      - gradle/gradle-wrapper.jar
+  pull_request:
+    paths:
+      - gradle/gradle-wrapper.jar
 
 jobs:
   validation:
