--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,10 +1,11 @@
 [versions]
-discord = "aliucord-SNAPSHOT"
-aliucord-core = "2.4.0"
-aliucord-gradle = "753ad25"
+discord = "126021"
+aliucord-core = "2.6.0"
+aliucord-gradle = "2.3.0"
+aliuhook = "1.1.4"
 #noinspection GradleDependency
-kotlin = "1.5.21"
-android = "7.4.2"
+kotlin = "2.2.20"
+android = "8.13.2"
 ktlintPlugin = "14.0.1"
 #noinspection GradleDependency Newer versions incompatible with other plugins
 ktlint = "0.50.0"
@@ -12,9 +13,11 @@ ktlint = "0.50.0"
 [libraries]
 discord = { module = "com.discord:discord", version.ref = "discord" }
 aliucord = { module = "com.aliucord:Aliucord", version.ref = "aliucord-core" }
+aliuhook = { module = "com.aliucord:Aliuhook", version.ref = "aliuhook" }
+kotlin-stdlib = { module = "org.jetbrains.kotlin:kotlin-stdlib", version.ref = "kotlin" }
 
 [plugins]
 android-library = { id = "com.android.library", version.ref = "android" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
-aliucord = { id = "com.aliucord.gradle", version.ref = "aliucord-gradle" }
+aliucord = { id = "com.aliucord.plugin", version.ref = "aliucord-gradle" }
 ktlint = { id = "org.jlleitschuh.gradle.ktlint", version.ref = "ktlintPlugin" }
